# Take-Your-Pills

./: .gitignore  .markdownlint.json  .yamllint.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  análise_geral_preparacao_repositorio.md  aplicacao-planejamento-repo2.md  copilot_repo_admin_request.md  export_presets.cfg  governance.bootstrap.json  pipeline_review_automation_plan.md  plan.md  planejamento-repo2-automacoes.md  planejamento_repositorio.md  plano_implementacao_preparacao_repositorio.md  project.godot  pyproject.toml  take-your-pills_backlog_final.md  take-your-pills_planejamento_estrutura_repositorio_final.md  take_your_pills_issues_detalhados.md  take_your_pills_project_definitions_update.md
.githooks/: pre-push
.github/: CODEOWNERS  labels.json  labels.yml  milestones.json  project-board-flow.json  pull_request_template.md  review-routing.json
docs/: backlog-normalization-notes.md  checklist-consolidada-implementacoes.md  checklist-preparacao-repositorio-verificacao.md  checklist-preparacao-repositorio.md  issues-creation-matrix.md  issues-rollout-plan.md  labels-patterns.md  pipeline-review-implementation-phase-a.md  repo-admin-checklist.md  repo-quality-policy.md  repository-governance.md  workflow-map.md
governance_bootstrap/: __init__.py  auto_label.py  cli.py  comments.py  github.py  issue_milestones.py  issues.py  labels.py  milestones.py  pr_autofill.py  pr_hygiene.py  pr_validation.py  project.py  release.py
repo_organization_docs/: project-definitions.md  repository-and-automation.md
scripts/: run_signals.gd  (+1 more)
(+188 files in other folders)
